# esp32-wifi

./: #auto_saved_files#  .gitignore  README.md  power.kicad_sch  ucontroller.kicad_sch  usb.kicad_sch  wireless.kicad_pcb  wireless.kicad_prl  wireless.kicad_pro  wireless.kicad_sch
firmware/: Makefile  README.md  sdkconfig  table_partitions.csv
firmware/main/: CMakeLists.txt  Kconfig.projbuild  file_test.txt  main.c  receiver.c  transmitter.c
firmware/main/inc/component/: filesystem.h  httpClient.h  httpServer.h  wifi.h
firmware/main/inc/tasks/: wifiDriver.h  wifiTaskHandler.h
firmware/main/src/component/: filesystem.c  httpClient.c  httpServer.c  wifi.c
firmware/main/src/tasks/: wifiDriver.c  wifiTaskHandler.c
firmware/tests/: httpClientSimulator.py  httpServerSimulator.py
hardware/: fp-lib-table  power.kicad_sch  sym-lib-table  ucontroller.kicad_sch  usb.kicad_sch  wireless.kicad_pcb  wireless.kicad_prl  wireless.kicad_pro  wireless.kicad_sch
hardware/gerber-files/: wireless-B_Cu.gbr  wireless-B_Mask.gbr  wireless-B_Paste.gbr  wireless-B_Silkscreen.gbr  wireless-Edge_Cuts.gbr  wireless-F_Cu.gbr  wireless-F_Mask.gbr  wireless-F_Paste.gbr  wireless-F_Silkscreen.gbr  wireless-job.gbrjob
hardware/libraries/BC817W/: BC817W.lib  SOT65P210X110-3N.kicad_mod
hardware/libraries/TSM3443CX6_RFG/: SOT95P280X120-6N.kicad_mod  TSM3443CX6_RFG.lib
